| Summary: | ASTERISK-21014: logger.c Call_ID 'bound' or 'removed' DEBUG messages spammed during a feature code attended transfer | ||
| Reporter: | Rusty Newton (rnewton) | Labels: | |
| Date Opened: | 2013-01-30 11:11:11.000-0600 | Date Closed: | 2013-02-15 11:19:58.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Core/General Features |
| Versions: | SVN | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Asterisk SVN-branch-11-r380043 built by root @ ubuntu on a x86_64 running Linux on 2013-01-26 23:28:17 UTC | Attachments: | ( 0) full_log.txt |
| Description: | Happens during SIP to SIP call with feature code attended transfer.
full_log attached. * 6001 dials 6002 * 6002 answers * 6002 dials "*2" waits a few seconds and then hangs up. During "waits a few seconds" the full log will show 80-100 of the follow DEBUG messages per second. {noformat} [Jan 30 10:29:23] DEBUG[12222][C-00000005] logger.c: CALL_ID [C-00000005] bound to thread. [Jan 30 10:29:23] DEBUG[12222][C-00000005] logger.c: Call_ID [C-00000005] being removed from thread. {noformat} The issue also occurs if and while 6002 dials the transfer destination. The messages stop spamming after dialing a transfer destination or the channels hang up. No noticeable effect on a single call, but may be indicative of something happening that shouldn't be. | ||
| Comments: | |||